# mach

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  docker-compose-redis.yml  docker-compose.yml  notes.md  old-docker-compose.yml  setup_ec2.sh
bench/: Cargo.toml  README.md  build.rs  default-conf.yaml
bench/default-config/: config.yaml  item.rs  type_defs.rs
bench/src/: config.rs  microbench.rs  microbench_logs.rs
instrumentation/: Cargo.toml  build.rs
instrumentation/src/: lib.rs
mach/: Cargo.toml  README.md  setup.sh
mach-otlp/: Cargo.toml
mach-otlp/src/: lib.rs
mach/src/: active_block.rs  byte_buffer.rs  constants.rs  counters.rs  durability.rs  field_type.rs  id.rs  insert_buffer.rs  lib.rs  microbench.rs  microbench_logs.rs  persistent_list.rs  persistent_list2.rs  rdtsc.rs  reader.rs  runtime.rs  sample.rs  segment.rs  series.rs  snapshot.rs  snapshot2.rs  snapshotter.rs  source.rs  tags.rs  test_utils.rs  timer.rs  tsdb.rs  utils.rs  writer.rs
mach/src/active_segment/: mod.rs
mach/src/compression/: bitpack.rs  bytes_lz42.rs  compression_scheme.rs  decimal.rs  delta_of_delta.rs  heap.rs  lz4.rs  mod.rs  noop.rs  timestamps.rs  utils.rs  xor.rs
mach/src/durable_queue/: file_backend.rs  kafka_backend.rs  mod.rs
mach/src/kafka/: kafka_entry.rs  mod.rs  producer.rs
mach/src/mem_list/: block.rs  circular_block_buffer.rs  circular_list.rs  data_block.rs  metadata_list.rs  mod.rs  read_only.rs  read_only_block.rs  source_block_list.rs  source_list.rs
mach/src/mem_list/old/: block.rs  block_list.rs  old_block_list.rs
mach/src/old/: buffer_chain.rs  durability.rs  snapshot.rs
mach/src/old/durable_queue/: file_backend.rs  kafka_backend.rs  mod.rs
mach/src/persistent_list/: file_backend.rs  inner.rs  kafka_backend.rs  mod.rs  vector_backend.rs
mach/src/persistent_list2/: active_block.rs  inner.rs  kafka_async_backend.rs  kafka_backend.rs  list.rs  mod.rs
mach/src/persistent_list_old/: file_backend.rs  inner.rs
mach/src/replication/: targets.rs
mach/src/segment/: buffer.rs  full_segment.rs  mod.rs  segment.rs
mach/src/segment/old/: wrapper_template.rs
mach/src/utils/: bytes.rs  counter.rs  kafka.rs  mod.rs  timer.rs  vec.rs  wp_lock.rs
mach2/: Cargo.toml  README.md
mach2/src/: active_block.rs  byte_buffer.rs  constants.rs  field_type.rs  id.rs  lib.rs  sample.rs  segment.rs  snapshot.rs  snapshotter.rs  source.rs  test_utils.rs  tsdb.rs  utils.rs  writer.rs
mach2/src/active_segment/: mod.rs
mach2/src/compression/: compression_scheme.rs  delta_of_delta.rs  heap.rs  lz4.rs  mod.rs  timestamps.rs
mach2/src/from_old/compression/: bitpack.rs  bytes_lz4.rs  bytes_lz42.rs  decimal.rs  delta_of_delta.rs  lz4.rs  noop.rs  utils.rs  xor.rs
mach2/src/from_old/utils/: byte_buffer.rs  counter.rs  kafka.rs  mod.rs
mach2/src/kafka/: kafka_entry.rs  mod.rs  producer.rs
mach2/src/mem_list/: data_block.rs  metadata_list.rs  mod.rs  read_only.rs
old/bench/: Cargo.toml  build.rs
old/bench/src/: microbench.rs  rdtsc.rs  zipf.rs
old/instrumentation/: build.rs
old/instrumentation/src/: mach.proto
old/mach-otlp/: build.rs
old/mach-otlp/opentelemetry-proto/opentelemetry/proto/logs/v1/: logs.proto
old/mach-otlp/opentelemetry-proto/opentelemetry/proto/metrics/v1/: metrics.proto
old/mach-otlp/opentelemetry-proto/opentelemetry/proto/trace/v1/: trace.proto
old/mach-otlp/src/: lib.rs
otlp/: Cargo.toml
otlp/src/: lib.rs
src/: .bench2.rs.rustfmt  .lib.rs.swp  .tsdb.rs.swp  active_block.rs  active_buffer.rs  active_segment.rs  bench1.rs  bench2.rs  bench3.rs  bench4.rs  benchmark_logs.rs  buffer.rs  constants.rs  durability.rs  flush_buffer.rs  id.rs  into.rs  lib.rs  managed.rs  memseries.rs  metadata.rs  microbench.rs  rdtsc.rs  read_set.rs  reader.rs  runtime.rs  sample.rs  segment.rs  segment_old.rs  series.rs  tags.rs  test_utils.rs  tsdb.rs  tsdb2.rs  write_thread.rs  writer.rs  zipf.rs
src/active_segment/: buffer.rs  mod.rs  segment.rs  wrapper.rs
src/backend/: '  fs-old.rs  fs.rs  kafka.rs  kafka_new.rs  mod.rs
src/block/: .file.rs.swp  .mod.rs.swp  file.rs  mod.rs
src/block_old/: file.rs
src/chunk/: chunk.rs  inner.rs  mod.rs  new.rs
src/chunk_old/: inner.rs  mod.rs  serialized.rs
src/compression/: bytes_lz4.rs  bytes_lz42.rs  decimal.rs  fixed.rs  lz4.rs  lz4_string.rs  mod.rs  rows.rs  simple.rs  timestamps.rs  utils.rs  xor.rs
src/compression2/: bytes_lz4.rs  decimal.rs  mod.rs  timestamps.rs
src/compression_old/: rows.rs  simple.rs
src/old/: active_block_old.rs  bench2.rs  flush_buffer.rs  ids.rs  series_metadata.rs  types.rs
src/old/backend/: fs.rs  mod.rs
src/old/block_old/: mod.rs
src/old/compression/: bytes_lz4.rs  decimal.rs  timestamps.rs  xor.rs
src/old/compression_old/: mod.rs
src/old/segment_old/: buffer.rs  mod.rs  wrapper.rs
src/old/writer/: file.rs  kafka.rs  mod.rs
src/persistent_list/: chunk_trait.rs  file_backend.rs  inner.rs  inner2.rs  kafka2_backend.rs  kafka_backend.rs  kafka_hybrid_backend.rs  kafka_writer.rs  list_head.rs  memory.rs  mod.rs  redis_backend.rs  redis_kafka_backend.rs  vector_backend.rs  vector_list.rs  vector_writer.rs
src/persistent_list/old/: inner.rs
src/segment/: buffer.rs  full_segment.rs  make_wrapper.py  mod.rs  segment.rs  wrapper.rs  wrapper_template.rs
src/utils/: .list.rs.swp  bytes.rs  list.rs  list_old.rs  mod.rs  q_allocator.rs  wp_lock.rs
src/writer/: file.rs  kafka.rs  mod.rs
