[package]
name = "mach-private"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitstream-io = "1.2.0"
num = "0.4.0"
bitpacking = "0.8.4"
fixed = "1.10.0"
crossbeam = "0.8.1"
async-std = { version = "1.9", features = ["unstable", "attributes"] }
lzzzz = "0.8.0"
enum_dispatch = "0.3.7"
#dashmap = "4.0.2"
#seq-macro = "0.2"
#lz4_flex = "0.8.2"
#libc = "0.2.96"
#crossbeam-queue = {path = "./crossbeam/crossbeam-queue"}
#crossbeam-skiplist = {path = "./crossbeam/crossbeam-skiplist"}

[dev-dependencies]
tempdir = "0.3"
rand = "0.8.4"
lazy_static = "1.4"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"

[profile.test]
opt-level = 3
