[package]
name = "mach-private"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitstream-io = "1.2.0"
num = "0.4.0"
bitpacking = "0.8.4"
fixed = "1.10.0"
crossbeam = "0.8.1"
lzzzz = "0.8.0"
#enum_dispatch = "0.3.7"
serde = { version = "1.0.127", features = ["derive"] }
bincode = "1.3.3"
dashmap = "4.0.2"
rdkafka = {version="0.28.0"}
async-std = { version = "1.9", features = ["unstable", "attributes", "tokio1"] }
#futures = "0.3.18"
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0.66"
rand = "0.8.4"
lazy_static = "1.4"
raw-cpuid = "10.2.0"
seq-macro = "0.3.0"
redis = {version="0.21.5", features=["aio", "async-std-comp"]}
rustc-hash = "1.1.0"

[dev-dependencies]
tempfile = "3.2.0"

#[profile.test]
#opt-level = 3

[profile.release]
debug=true

#[[bin]]
#name = "bench-kafka-fs"
#path = "src/bench1.rs"

[[bin]]
name = "bench2"
path = "src/bench2.rs"

[[bin]]
name = "bench3"
path = "src/bench3.rs"

[features]
kafka-backend = []
vector-backend = []
file-backend = []
