[package]
name = "mach-private"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitstream-io = "1.2.0"
num = "0.4.0"
bitpacking = "0.8.4"
fixed = "1.10.0"
crossbeam = "0.8.1"
lzzzz = "0.8.0"
serde = { version = "1.0.127", features = ["derive"] }
bincode = "1.3.3"
dashmap = "4.0.2"
rdkafka = {version="0.28.0"}
#async-std = { version = "1.9", features = ["unstable", "attributes", "tokio1"] }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0.66"
rand = "0.8.4"
lazy_static = "1.4"
raw-cpuid = "10.2.0"
seq-macro = "0.3.0"
rustc-hash = "1.1.0"
tokio = { version = "1.14.0", features = ["full"] }
flame = "0.2.2"
flamer = "0.4"
#helper = "3.1.0"
#redis = {version="0.21.5", features=["aio", "async-std-comp"]}
#enum_dispatch = "0.3.7"
#futures = "0.3.18"
#kube = { version = "0.69.1", features = ["runtime", "derive"] }
#k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
#consistent_hash_ring = "0.8.0"

[dev-dependencies]
tempfile = "3.2.0"

#[profile.test]
#opt-level = 3

[profile.release]
debug=true

[[bin]]
name = "benchmark_logs"
path = "src/benchmark_logs.rs"

[[bin]]
name = "bench4"
path = "src/bench4.rs"

[features]
kafka-backend = []
vector-backend = []
file-backend = []
