[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mach = { path = "../mach" }
num = "0.4.0"
tonic = { version = "0.6.2", features = ["prost", "compression"] }
tokio = "1.17.0"
tokio-stream = "0.1.8"
prost = "0.9"
futures = "0.3.21"
rand = "0.8.4"
seq-macro = "0.3.0"
dashmap = "4.0.2"
lazy_static = "1.4"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
rtrb = "0.2.0"
serde_yaml = "0.8.23"
num-format = "0.4.0"
uuid = "0.8.2"

[[bin]]
name = "microbench"
path = "src/microbench.rs"

[build-dependencies]
serde_yaml = "0.8.23"
serde = { version = "1.0.127", features = ["derive"] }

