[package]
name = "mach-otlp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mach = { path = "../mach" }
otlp = { path = "../otlp" }
tonic = { version = "0.6.2", features = ["prost", "compression", "transport"] }
prost = "0.9"
serde = { version = "1.0.127", features = ["derive"] }
fxhash = "0.2.1"
bincode = "1.3.3"

[build-dependencies]
tonic-build = { version = "0.6.2", features = ["prost", "compression"] }


