[package]
name = "mach2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde-big-array = "0.4.1"
rand = "0.8.5"
lzzzz = "1.0.3"
bitpacking = "0.8.4"
bincode = "1.3.3"
rdkafka = {version="0.28.0"}
kafka = "0.9.0"
tokio = { version = "1.14.0", features = ["full"] }

